--- a/src/main/resources/fxml/homeResponsanili.fxml
+++ b/src/main/resources/fxml/homeResponsanili.fxml
@@ -3,16 +3,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <SplitPane dividerPositions="0.20603015075376885" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerHomeResponsabili">
@@ -34,106 +33,74 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="catalogoButton" layoutX="184.0" layoutY="50.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="87.0" style="-fx-background-color: f1a9a9;" text="Catalogo" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="630.0" AnchorPane.topAnchor="45.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="inscerisciProdButton" layoutX="309.0" layoutY="50.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="130.0" style="-fx-background-color: #f27777;" text="Inserisci Prodotto" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="460.0" AnchorPane.topAnchor="45.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="speseButton" layoutX="485.0" layoutY="49.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="98.0" style="-fx-background-color: #f27777;" text="Stato spese" AnchorPane.leftAnchor="470.0" AnchorPane.topAnchor="45.0">
+            <Button fx:id="speseButton" layoutX="548.0" layoutY="43.0" mnemonicParsing="false" onAction="#speseButtonHandler" prefHeight="35.0" prefWidth="113.0" style="-fx-background-color: #f27777;" text="Stato spese" AnchorPane.leftAnchor="548.0" AnchorPane.topAnchor="43.0">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
          </children></AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
          <children>
-            <SplitPane dividerPositions="0.21316964285714285" prefHeight="410.0" prefWidth="868.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <SplitPane dividerPositions="0.22544642857142858" layoutX="21.0" layoutY="33.0" prefHeight="410.0" prefWidth="868.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <items>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="275.0" prefWidth="214.0" style="-fx-background-color: #ddfaf7;">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="629.0" prefWidth="293.0" style="-fx-background-color: #ddfaf7;">
                      <children>
-                        <Label layoutX="61.0" layoutY="16.0" text="REPARTO" textFill="#f27777">
-                           <font>
-                              <Font name="System Bold" size="13.0" />
-                           </font>
-                        </Label>
-                        <ComboBox fx:id="repartoComboBox" layoutX="19.0" layoutY="40.0" prefWidth="150.0" AnchorPane.bottomAnchor="404.6666666666667" AnchorPane.leftAnchor="19.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="40.0" />
-                        <Label layoutX="79.0" layoutY="74.0" text="Filtri" textFill="#f27777">
+                        <Label layoutX="79.0" layoutY="14.0" prefHeight="19.0" prefWidth="42.0" text="FILTRI" textFill="#f27777">
                            <font>
                               <Font name="System Bold Italic" size="13.0" />
                            </font>
                         </Label>
-                        <GridPane layoutX="10.0" layoutY="93.0" prefHeight="209.0" prefWidth="168.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="93.0">
-                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints maxHeight="15.0" minHeight="20.0" prefHeight="15.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="15.0" minHeight="20.0" prefHeight="15.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="15.0" minHeight="20.0" prefHeight="15.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="15.0" minHeight="20.0" prefHeight="15.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                           </rowConstraints>
-                           <children>
-                              <Label prefHeight="19.0" prefWidth="35.0" text="Tipo" textAlignment="CENTER">
-                                 <font>
-                                    <Font size="13.0" />
-                                 </font>
-                              </Label>
-                              <ComboBox fx:id="tipoComboBox" prefWidth="150.0" GridPane.rowIndex="1" />
-                              <Label text="Marca" GridPane.rowIndex="2">
-                                 <font>
-                                    <Font size="13.0" />
-                                 </font>
-                              </Label>
-                              <ComboBox fx:id="marcaComboBox" prefWidth="150.0" GridPane.rowIndex="3" />
-                              <Label text="Allergeni" GridPane.rowIndex="4">
-                                 <font>
-                                    <Font size="13.0" />
-                                 </font>
-                              </Label>
-                              <ComboBox fx:id="allergeniComboBox" prefWidth="150.0" GridPane.rowIndex="5" />
-                              <Label layoutX="10.0" layoutY="135.0" text="Altro" GridPane.rowIndex="6">
-                                 <font>
-                                    <Font size="13.0" />
-                                 </font>
-                              </Label>
-                              <ComboBox fx:id="altroComboBox" layoutX="10.0" layoutY="163.0" prefWidth="150.0" GridPane.rowIndex="7" />
-                           </children>
-                        </GridPane>
-                        <Label layoutX="14.0" layoutY="306.0" text="Ordina per" textFill="#f27777">
+                        <Button fx:id="filtraButton1" layoutX="29.0" layoutY="413.0" mnemonicParsing="false" onAction="#filtraButtonHandler" prefHeight="35.0" prefWidth="142.0" style="-fx-background-color: #f27777;" text="Filtra" AnchorPane.topAnchor="413.0">
                            <font>
-                              <Font name="System Bold" size="12.0" />
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
+                        <Label layoutX="10.0" layoutY="82.0" text="Marca" />
+                        <TextField fx:id="marcaTextField" layoutX="59.0" layoutY="78.0" prefHeight="25.0" prefWidth="125.0" />
+                        <Label layoutX="55.0" layoutY="110.0" text="Caratteristiche" textFill="#f27777">
+                           <font>
+                              <Font name="System Bold Italic" size="13.0" />
                            </font>
                         </Label>
-                        <SplitMenuButton fx:id="ordinaSpliMenuButton" layoutX="14.0" layoutY="323.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="144.0" AnchorPane.topAnchor="328.0">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Marca" />
-                              <MenuItem mnemonicParsing="false" text="Prezzo crescente" />
-                              <MenuItem mnemonicParsing="false" text="Prezzo decrescente" />
-                           </items>
-                        </SplitMenuButton>
-                        <Button fx:id="filtraButton" layoutX="64.0" layoutY="398.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" style="-fx-background-color: #f27777;" text="Filtra">
+                        <ScrollPane fitToWidth="true" layoutX="15.0" layoutY="147.0" prefHeight="217.0" prefWidth="169.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="140.0">
+                           <content>
+                              <VBox fx:id="caratteristicheVBox" prefHeight="156.0" prefWidth="179.0" spacing="3.0" />
+                           </content>
+                        </ScrollPane>
+                        <ComboBox fx:id="ordinaComboBox" layoutX="58.0" layoutY="366.0" prefHeight="25.0" prefWidth="125.0" AnchorPane.topAnchor="366.0" />
+                        <Label layoutX="10.0" layoutY="369.0" text="Ordine" textFill="#f27777" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="369.0">
+                           <font>
+                              <Font name="System Bold Italic" size="13.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="10.0" layoutY="48.0" text="Reparto" />
+                        <ComboBox fx:id="repartoComboBox1" layoutX="59.0" layoutY="44.0" prefHeight="25.0" prefWidth="125.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="470.0" prefWidth="800.0" style="-fx-background-color: #ddfaf7;">
+                     <children>
+                        <ListView fx:id="itemListView" layoutX="-78.0" prefHeight="460.0" prefWidth="438.0" style="-fx-background-color: #ecfbfa;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="5.0" />
+                        <Spinner fx:id="quantitySpinner" editable="true" layoutX="608.0" layoutY="22.0" prefHeight="25.0" prefWidth="60.0" AnchorPane.rightAnchor="23.33333333333337" AnchorPane.topAnchor="22.0" />
+                        <Label layoutX="521.0" layoutY="25.0" text="QUANTITA'" textFill="#f27777" AnchorPane.rightAnchor="99.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="modificaButton" layoutX="542.0" layoutY="68.0" mnemonicParsing="false" onAction="#modificaButtonHandler" prefHeight="35.0" prefWidth="151.0" style="-fx-background-color: #f27777;" text="Modifica" AnchorPane.rightAnchor="24.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="inserisciButton" layoutX="516.0" layoutY="116.0" mnemonicParsing="false" onAction="#inserisciButtonHandler" prefHeight="35.0" prefWidth="151.0" style="-fx-background-color: #f27777;" text="Inserisci">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
                      </children>
                   </AnchorPane>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="470.0" prefWidth="662.0" style="-fx-background-color: #ddfaf7;">
-                     <children>
-                        <ScrollBar layoutX="681.0" layoutY="157.0" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children>
-                  </AnchorPane>
                </items>
             </SplitPane>
-         </children></AnchorPane>
+         </children>
+      </AnchorPane>
   </items>
 </SplitPane>
