--- a/src/main/resources/fxml/modificaUtente.fxml
+++ b/src/main/resources/fxml/modificaUtente.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -48,6 +49,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <ChoiceBox fx:id="sezioneChoicebox" layoutX="620.0" layoutY="46.0" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: transparent;" />
          </children>
       </AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="322.0" prefWidth="898.0" style="-fx-background-color: #ddfaf7;">
