--- a/src/main/resources/fxml/profilo.fxml
+++ b/src/main/resources/fxml/profilo.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
@@ -44,6 +46,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <ChoiceBox fx:id="sezioneChoicebox" layoutX="620.0" layoutY="48.0" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: transparent;" />
          </children>
       </AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="322.0" prefWidth="898.0" style="-fx-background-color: #ddfaf7;">
@@ -139,6 +142,11 @@
                   <Label fx:id="puntiLabel" layoutX="149.0" layoutY="23.0" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                </children>
             </GridPane>
+            <Button fx:id="modificaButton" layoutX="746.0" layoutY="396.0" mnemonicParsing="false" onAction="#modificaButtonHandler" prefHeight="39.0" prefWidth="111.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Modifica" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
          </children></AnchorPane>
   </items>
 </SplitPane>
