--- a/src/main/resources/fxml/saldoPunti_tessera.fxml
+++ b/src/main/resources/fxml/saldoPunti_tessera.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
@@ -44,6 +45,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <ChoiceBox fx:id="sezioneChoicebox" layoutX="620.0" layoutY="46.0" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: transparent;" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
          <children>
