--- a/src/main/resources/fxml/utente_modifica_profilo.fxml
+++ b/src/main/resources/fxml/utente_modifica_profilo.fxml
@@ -1,58 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.206" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerModificaUtente">
-  <items>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
-         <children>
-            <ImageView fx:id="covidMarketImageView" fitHeight="116.0" fitWidth="181.0" layoutX="18.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="2.0">
-               <image>
-                  <Image url="@../img/logo.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="603.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="36.5" AnchorPane.rightAnchor="290.0" AnchorPane.topAnchor="36.5">
-               <image>
-                  <Image url="@../img/utente.jpg" />
-               </image>
-            </ImageView>
-            <Label layoutX="169.0" layoutY="41.0" prefHeight="34.0" prefWidth="332.0" text="MODIFICA DATI ANAGRAFICI" textFill="#f27777" underline="true">
-               <font>
-                  <Font name="System Bold Italic" size="15.0" />
-               </font>
-            </Label>
-            <ImageView fx:id="carrelloImageView" fitHeight="70.0" fitWidth="70.0" layoutX="792.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" smooth="false" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="25.0">
-               <image>
-                  <Image url="@../img/carrello.jpg" />
-               </image>
-            </ImageView>
-            <Label text="Ciao, " textFill="#f27777" AnchorPane.leftAnchor="620.0" AnchorPane.topAnchor="51.0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="usernameLabel" prefHeight="17.0" prefWidth="90.0" text="sis" textFill="#f27777" wrapText="true" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <ChoiceBox fx:id="sezioneChoicebox" layoutX="620.0" layoutY="46.0" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: transparent;" />
-         </children>
-      </AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="322.0" prefWidth="898.0" style="-fx-background-color: #ddfaf7;">
+<Pane fx:id="gatePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerUserModifyProfile">
+   <children>
+      <AnchorPane layoutX="1.0" minHeight="0.0" minWidth="0.0" prefHeight="480.0" prefWidth="898.0" style="-fx-background-color: #ddfaf7;">
          <children>
             <GridPane layoutX="67.0" layoutY="84.0" prefHeight="296.0" prefWidth="333.0" AnchorPane.bottomAnchor="96.0" AnchorPane.leftAnchor="67.0" AnchorPane.topAnchor="80.0">
                <columnConstraints>
@@ -98,13 +60,12 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="indirizzoTextField" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label fx:id="nomeLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" />
-                  <Label fx:id="cognomeLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Label fx:id="capLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <ComboBox fx:id="cittaCombobox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label fx:id="cognomeLabel1" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <Label fx:id="cognomeLabel11" layoutX="119.0" layoutY="269.0" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" />
+                  <TextField fx:id="nameField" GridPane.columnIndex="1" />
+                  <TextField fx:id="surnameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="addressField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                </children>
             </GridPane>
             <GridPane layoutX="465.0" layoutY="45.0" prefHeight="198.0" prefWidth="294.0" AnchorPane.rightAnchor="139.0" AnchorPane.topAnchor="80.0">
@@ -119,9 +80,6 @@
                   <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <TextField fx:id="mailTextField" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" />
-                  <PasswordField fx:id="pswTextField" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <PasswordField fx:id="controllopswTextField" editable="false" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <Label prefHeight="17.0" prefWidth="80.0" text="e-mail">
                      <font>
                         <Font size="15.0" />
@@ -142,14 +100,18 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="pagamentoComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <ComboBox fx:id="paymentComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="emailField" GridPane.columnIndex="1" />
+                  <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <PasswordField fx:id="confirmPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <Button fx:id="modificaButton" layoutX="624.0" layoutY="347.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="111.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Modifica" textAlignment="CENTER" AnchorPane.rightAnchor="140.0">
+            <Button layoutX="624.0" layoutY="347.0" mnemonicParsing="false" onAction="#modifyButtonPress" prefHeight="39.0" prefWidth="111.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Modifica" textAlignment="CENTER" AnchorPane.rightAnchor="140.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-         </children></AnchorPane>
-  </items>
-</SplitPane>
+         </children>
+      </AnchorPane>
+   </children>
+</Pane>
