--- a/src/main/resources/fxml/utente_profilo.fxml
+++ b/src/main/resources/fxml/utente_profilo.fxml
@@ -1,15 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<Pane fx:id="gatePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerUserProfile">
+<Pane fx:id="gatePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerUserProfile">
    <children>
-      <AnchorPane layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane layoutX="1.0" minHeight="0.0" minWidth="0.0" prefHeight="480.0" prefWidth="900.0" style="-fx-background-color: #ddfaf7;">
          <children>
-            <Label layoutX="283.0" layoutY="183.0" text="Profilo" />
+            <GridPane layoutX="67.0" layoutY="84.0" prefHeight="296.0" prefWidth="333.0" AnchorPane.bottomAnchor="96.0" AnchorPane.leftAnchor="67.0" AnchorPane.topAnchor="80.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="378.0" minWidth="10.0" prefWidth="80.6666768391927" />
+                  <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="295.5555750528971" minWidth="97.77776082356769" prefWidth="196.111073811849" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="192.8888702392578" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label prefHeight="17.0" prefWidth="80.0" text="Nome">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="17.0" prefWidth="80.0" text="Cognome" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="17.0" prefWidth="80.0" text="Indirizzo" GridPane.rowIndex="2">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="17.0" prefWidth="80.0" text="Città" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="17.0" prefWidth="80.0" text="CAP" GridPane.rowIndex="4">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="nomeLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" />
+                  <Label fx:id="cognomeLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="capLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label fx:id="indirizzoLabel" layoutX="119.0" layoutY="23.0" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label fx:id="cittaLabel" layoutX="119.0" layoutY="121.0" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               </children>
+            </GridPane>
+            <GridPane layoutX="465.0" layoutY="45.0" prefHeight="198.0" prefWidth="294.0" AnchorPane.rightAnchor="139.0" AnchorPane.topAnchor="80.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.9999796549479" minWidth="10.0" prefWidth="138.66666666666666" />
+                  <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="175.44440714518225" minWidth="145.222178141276" prefWidth="155.33333333333334" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label prefHeight="17.0" prefWidth="80.0" text="e-mail" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="21.0" prefWidth="156.0" text="Pagamento" GridPane.rowIndex="2">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="mailLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="pagamentoLabel" layoutX="149.0" layoutY="73.0" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label prefHeight="17.0" prefWidth="80.0" text="Telefono">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="telefonoLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" />
+                  <Label layoutX="10.0" layoutY="125.0" prefHeight="21.0" prefWidth="156.0" text="Tessera Fedeltà" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="tesseraLabel" layoutX="149.0" layoutY="23.0" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label layoutX="10.0" layoutY="225.0" prefHeight="21.0" prefWidth="156.0" text="Saldo punti" GridPane.rowIndex="4">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="puntiLabel" layoutX="149.0" layoutY="23.0" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+               </children>
+            </GridPane>
+            <Button fx:id="modificaButton" layoutX="746.0" layoutY="396.0" mnemonicParsing="false" onAction="#modificaButtonPress" prefHeight="39.0" prefWidth="111.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Modifica" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
